S390 builds broken after JDK-8254231

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 16
    • Affects Version/s: 16
    • Component/s: hotspot
    • b26

      In file included from /home/buildbot/worker/build-jdkX-linux/build/src/hotspot/share/prims/foreign_globals.cpp:25:0:
      /home/buildbot/worker/build-jdkX-linux/build/src/hotspot/share/prims/foreign_globals.hpp:29:37: fatal error: foreign_globals_s390.hpp: No such file or directory
       #include CPU_HEADER(foreign_globals)

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: