8256860: S390 builds broken after JDK-8254231